# backend/docs/swagger.yaml
@@ -7,6 +7,29 @@ definitions:
       product_id:
         type: integer
     type: object
+  model.AdminDTO:
+    properties:
+      city:
+        type: string
+      email:
+        type: string
+      email_notification:
+        type: boolean
+      father_name:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      image_id:
+        type: string
+      last_name:
+        type: string
+      telegram:
+        type: string
+      telegram_notification:
+        type: boolean
+    type: object
   model.AdminEmailPasswordRequest:
     properties:
       email:
@@ -32,6 +55,8 @@ definitions:
     properties:
       active:
         type: boolean
+      count:
+        type: integer
       description:
         type: string
       image_ids:
@@ -61,6 +86,33 @@ definitions:
       email:
         type: string
       password:
+        type: string
+    type: object
+  model.CustomerDTO:
+    properties:
+      delivery_type:
+        type: string
+      email:
+        type: string
+      email_notification:
+        type: boolean
+      father_name:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      payment_type:
+        type: string
+      phone:
+        type: string
+      telegram:
+        type: string
+      telegram_notification:
+        type: boolean
+      website_alias:
         type: string
     type: object
   model.ErrorResponse:
@@ -103,6 +155,8 @@ definitions:
     properties:
       active:
         type: boolean
+      count:
+        type: integer
       description:
         type: string
       id:
@@ -153,10 +207,52 @@ definitions:
       website_alias:
         type: string
     type: object
+  model.UpdateAdminProfileRequest:
+    properties:
+      city:
+        type: string
+      email_notification:
+        type: boolean
+      father_name:
+        type: string
+      first_name:
+        type: string
+      image_id:
+        type: string
+      last_name:
+        type: string
+      telegram:
+        type: string
+      telegram_notification:
+        type: boolean
+    type: object
+  model.UpdateCustomerProfileRequest:
+    properties:
+      delivery_type:
+        type: string
+      email_notification:
+        type: boolean
+      father_name:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      payment_type:
+        type: string
+      phone:
+        type: string
+      telegram:
+        type: string
+      telegram_notification:
+        type: boolean
+    type: object
   model.UpdateProductRequest:
     properties:
       active:
         type: boolean
+      count:
+        type: integer
       description:
         type: string
       id:
@@ -201,6 +297,34 @@ info:
   title: Maestro
   version: "1.0"
 paths:
+  /admin/get-my-profile:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.AdminDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get my profile for admin
+      tags:
+      - admin
   /admin/sign-in:
     post:
       consumes:
@@ -261,6 +385,41 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: SingUp admin
+      tags:
+      - admin
+  /admin/update-profile:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: admin new profile info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateAdminProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.AdminDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update admin profile
       tags:
       - admin
   /cart/add-product:
@@ -326,6 +485,68 @@ paths:
       summary: Get customer's cart
       tags:
       - cart
+  /customer/get-all:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.CustomerDTO'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all customers in website TO ADMIN
+      tags:
+      - customer
+  /customer/get-my-profile:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CustomerDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get my profile to customer
+      tags:
+      - customer
   /customer/sign-in:
     post:
       consumes:
@@ -386,6 +607,41 @@ paths:
           schema:
             $ref: '#/definitions/model.ErrorResponse'
       summary: SingUp customer
+      tags:
+      - customer
+  /customer/update-profile:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: customer new profile info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateCustomerProfileRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CustomerDTO'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update customer profile
       tags:
       - customer
   /file/get-image/{image-id}:
