# backend/internal/app/api/customer/customer.go
@@ -10,6 +10,10 @@ type Service interface {
 	GetJWTSecret() string
 	CreateCustomer(ctx context.Context, alias, email, password string) (int, error)
 	GetCustomerIdByEmailPassword(ctx context.Context, alias, email, password string) (*model.Customer, error)
+	GetWebsiteByAdminId(ctx context.Context, adminId int) (*model.Website, error)
+	GetCustomersByWebsite(ctx context.Context, alias string) ([]*model.Customer, error)
+	UpdateCustomerProfile(ctx context.Context, c *model.Customer) (*model.Customer, error)
+	GetCustomerById(ctx context.Context, id int) (*model.Customer, error)
 }
 
 type Customer struct {
